--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
   padding: 0;
   scroll-behavior: smooth;
 }
+
 body {
   background-color: #fff;
   color: #fff;
   font-family: "Poppins", sans-serif;
   overflow-x: hidden; /* Hide horizontal scrollbar */
+  
 }
 /* Navbar styles */
 nav {
@@ -189,7 +191,8 @@ nav ul li a:hover {
   border: 1px solid black;
 }
 .btn2 {
-  padding: 10px 15px;
+  text-decoration: none;
+  padding: 8px 15px;
   border-radius: 9px;
   font-size: 1rem;
   font-weight: bold;
@@ -210,7 +213,6 @@ nav ul li a:hover {
 }
 
 .secondsection {
-  width: 50%;
   height: 60vh;
 }
 
@@ -230,10 +232,32 @@ nav ul li a:hover {
   margin: 56px 50px;
 }
 .secondsection .vertical {
-  height: 13vh;
+  height: 8rem;
   width: 1px;
   background-color: black;
   margin: 0 70px;
+}
+.secondsection .vertical2{
+  height: 16rem;
+  width: 1px;
+  background-color: #0db760;
+  
+}
+.secondsection .vertical2 .vertical-title
+{
+  top: 15.5rem;
+  position: relative;
+  color: #000000;
+  right: 13px;
+  width: 150px;
+  font-size: 13px;
+
+}
+.image-top2 {
+  width: 43px;
+  position: relative;
+  top: 16rem;
+  left: -20px;
 }
 
 main hr {
@@ -254,12 +278,12 @@ main hr {
 }
 
 .vertical-title {
-  top: 3.8rem;
+  top: 5rem;
   position: relative;
   color: #000000;
   right: 13px;
   width: 150px;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .container {
@@ -270,6 +294,7 @@ main hr {
   margin: 20px 0px;
 }
 .container .left1 {
+  width: 50%;
   margin-left: 4.5rem;
   background-color: #fff;
   color: #000000;
@@ -292,6 +317,10 @@ main hr {
 
 .container .left1 span {
   color: #0db760;
+}
+.container .right1 {
+  width: auto;
+  margin-left: 4rem;
 }
 
 /* .contact-form start  */
@@ -344,7 +373,7 @@ main hr {
 
 .form-group button:hover {
   background-color: #000000;
-}
+}                     
 
 h2 {
   /* text-align: center; */
@@ -403,7 +432,7 @@ ul li a {
 }
 
 ul li a:hover {
-  color: #00bcd4;
+  color: #2edd83;
 }
 
 .footer-bottom {
