--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
   color: #fff;
   font-family: "Poppins", sans-serif;
   overflow-x: hidden; /* Hide horizontal scrollbar */
-  
 }
 /* Navbar styles */
 nav {
@@ -229,21 +228,18 @@ nav ul li a:hover {
   background-color: black;
   margin: 0 70px;
 }
-.secondsection .vertical2{
+.secondsection .vertical2 {
   height: 16rem;
   width: 1px;
   background-color: #0db760;
-  
 }
-.secondsection .vertical2 .vertical-title
-{
+.secondsection .vertical2 .vertical-title {
   top: 15.9rem;
   position: relative;
   color: #000000;
   right: 13px;
   width: 150px;
   font-size: 13px;
-
 }
 .image-top2 {
   width: 43px;
@@ -252,7 +248,7 @@ nav ul li a:hover {
   left: -20px;
 }
 
-main hr {
+.main hr {
   border: 1;
   background: rgb(255, 255, 255);
   height: 1.2px;
@@ -365,7 +361,7 @@ main hr {
 
 .form-group button:hover {
   background-color: #000000;
-}                     
+}
 
 h2 {
   /* text-align: center; */
@@ -418,7 +414,7 @@ ul li {
 ul li a {
   text-decoration: none;
   color: #fff;
-  font-weight:bold;
+  font-weight: bold;
   font-size: 0.9rem;
   transition: color 0.3s;
 }
